# AemeathGacha

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
