[package]
name = "爱弥斯抽卡助手"
version = "1.0.0"
description = "Amis Gacha Helper for Wuthering Waves"
authors = ["echo"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.50"
regex = "1"
chrono = "0.4"
arboard = "3.3"
